# reconocimiento-de-patrones

./: .gitignore  Makefile  README.md  pyproject.toml
src/tasks/chapter_03/: plot_metrics.py
src/tasks/chapter_03/task_1/: mnist_classifier.py  test_model.py
src/tasks/chapter_03/task_2/: mnist_augmented.py  test_model.py
src/tasks/chapter_03/task_3/: test_model.py  titanic_classifier.py
src/tasks/chapter_03/task_4/: spam_classifier.py  test_model.py
src/utils/: plots.py
