[project]
name = "trujejercicios"
version = "0.1.0"
description = "MNIST classifier achieving >97% accuracy with KNeighborsClassifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.0",
    "numpy>=2.4.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
